updated product  handler
